--- a/src/app/auth/components/auth/auth.component.css
+++ b/src/app/auth/components/auth/auth.component.css
@@ -9,6 +9,7 @@
   color: #ffffff;
   position: relative;
 }
+
 .form {
   display: flex;
   flex-direction: column;
@@ -17,13 +18,11 @@
   padding: 30px;
   width: 450px;
   border-radius: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 ::placeholder {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .form button {
@@ -122,6 +121,7 @@
 .btn:hover {
   border: 1px solid #2d79f3;
 }
+
 .head {
   font-size: 30px;
   font-weight: 600;
@@ -130,7 +130,6 @@
 }
 
 .image {
-  /* border: 7px solid white ; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,6 +140,7 @@
   position: relative;
   font-size: 25px;
 }
+
 .overlay {
   position: absolute;
   width: 100%;
@@ -154,12 +154,14 @@
   left: 0;
   z-index: -1;
 }
+
 .logo {
   width: 116px;
   position: absolute;
   top: 80px;
   align-self: center;
 }
+
 aside {
   height: 100%;
   position: absolute;
@@ -172,14 +174,17 @@ aside {
   z-index: 999;
   text-align: center;
 }
+
 .user-info {
   display: flex;
   align-items: center;
 }
+
 .user-info p {
   flex: 1;
   margin: 0 0 0 21px;
 }
+
 .logout-button {
   width: 100%;
   position: absolute;
@@ -187,4 +192,33 @@ aside {
   left: 0;
   padding: 10px;
   background-color: inherit;
+}
+
+@media (max-width: 768px) {
+  .landing {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    margin-top: 150px;
+  }
+
+  .form {
+    width: 100%;
+    padding: 20px;
+    border-radius: 0;
+    box-shadow: none;
+  }
+
+  aside {
+    display: none;
+  }
+
+  .image {
+    display: none;
+  }
+
+  .overlay {
+    display: none;
+  }
+
 }
