--- a/src/app/products/components/landing/landing.component.css
+++ b/src/app/products/components/landing/landing.component.css
@@ -1,8 +1,9 @@
-/* silde imgs-start */
 svg {
-  width: 120%; /* Responsive width */
-  height: 100vh; /* Full height */
+  width: 100vw; 
+  height: auto; 
   position: absolute;
+  top: 0; 
+  left: 0; 
 }
 
 .animated-line {
@@ -10,31 +11,30 @@ svg {
   stroke-dasharray: 2000;
   stroke-dashoffset: 2000;
   stroke: #fff;
-  -webkit-animation: draw 2s forwards, width 2s forwards,
-    fill 3s ease-in forwards;
+  -webkit-animation: draw 2s forwards, width 2s forwards, fill 3s ease-in forwards;
 }
 
 @keyframes draw {
   to {
-    stroke-dashoffset: 0; /* End fully visible */
+    stroke-dashoffset: 0;
   }
 }
+
 @keyframes width {
   to {
-    stroke-width: 15; /* End fully visible */
+    stroke-width: 15;
   }
 }
 
 @keyframes fill {
   0% {
-    stroke: #ffffff; /* Start without fill */
+    stroke: #ffffff;
   }
   100% {
-    stroke: rgba(255, 255, 255, 0.31); /* Final fill color */
+    stroke: rgba(255, 255, 255, 0.31);
   }
 }
 
-/* Adding delays for staggered animations */
 .animated-line:nth-child(1) {
   animation-delay: 0.5s;
 }
@@ -54,6 +54,7 @@ svg {
 .hero-slides {
   margin-bottom: 100px;
 }
+
 .hero-slides .card {
   border: none;
   border-bottom: 1px solid;
@@ -76,6 +77,7 @@ svg {
   background-position: center;
   background-size: cover;
 }
+
 .de-layer {
   background-image: url(/assets/IMGS/de-layer.jpeg);
   width: 100%;
@@ -84,9 +86,10 @@ svg {
   left: 0;
   position: absolute;
 }
+
 .home-silde-layer {
   background-color: rgba(0, 0, 0, 0.3);
-  height: 80vh;
+  height: 80vh; /* Original height for large screens */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -125,7 +128,6 @@ svg {
   text-transform: uppercase;
   position: relative;
   font-weight: bold;
-  
 }
 
 .silde-content h6::after {
@@ -139,7 +141,6 @@ svg {
 }
 
 .silde-content h6:hover::after {
-  
   animation-name: shopNow;
   animation-duration: 1s;
 }
@@ -187,7 +188,40 @@ svg {
   .silde-content h1 {
     font-size: 40px;
   }
+
+  .home-silde-layer {
+    height: 45vh; 
+    
+  }
+
+  svg {
+    display: none; 
+  }
 }
+
+@media (min-width: 577px) and (max-width: 1105px) {
+  .home-silde-layer {
+    height: 60vh; /* Adjust height for medium screens */
+  }
+
+  svg {
+    display: none; 
+  }
+}
+
+/* Shrink on all screens under 1108px */
+@media  (min-width: 1105px)and(max-width: 1108px) {
+  .home-silde-layer {
+    height: 70vh; 
+  }
+}
+
+@media (min-width: 769px) {
+  svg {
+    display: block; 
+  }
+}
+
 
 /* =================== silde imgs-end =================== */
 
